<resources>
    <string name="app_name">MedicBleep</string>
    <string name="good">Good</string>
    <string name="default_good">(0)</string>
    <string name="report_interjection">!</string>
    <string name="processing">Processing</string>
    <string name="dot">.</string>
    <string name="send_picture">Send Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="send_video">Send Video</string>
    <string name="upload_picture_top_text">Upload a picture</string>
    <string name="use">Use</string>
    <string name="select_profile">Select profile</string>
    <string name="no_profiles">No profiles</string>
    <string name="no_items_text">Create a new profile</string>
    <string name="no_items_1">No items</string>
    <string name="no_items_2">Create a new group</string>
    <string name="settings">Settings</string>
    <string name="members">Members</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="settings_notifications">Settings notification</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="confirm">Confirm</string>
    <string name="go_to_gallery">Go to gallery</string>
    <string name="talk_members">Members</string>
    <string name="leave_talk">Leve talk</string>
    <string name="change_bg">Change background</string>
    <string name="create_big">CREATE</string>
    <string name="send_big">SEND</string>
    <string name="cancel_big">CANCEL</string>
    <string name="ok">OK</string>
    <string name="succeed">Success</string>
    <string name="failed">Failed</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="take_video">TAKE VIDEO</string>
    <string name="dont_show_info">Do not show info.</string>
    <string name="delete_group">You are about to delete selected group.</string>
    <string name="delete_message_confirmation">Are you sure you want to delete this message?</string>
    <string name="select_members">Select members</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group name</string>
    <string name="add_members">Add members</string>
    <string name="kick_members">Kick members</string>
    <string name="clear_group">Clear group</string>
    <string name="photo">Photo</string>
    <string name="submit_changes">SUBMIT</string>
    <string name="go_back">Go back</string>
    <string name="no_item_in">There are no item in the list.</string>
    <string name="ask_delete">Do you want to delete this message?</string>
    <string name="block_email_hint">Your e-mail.</string>
    <string name="block_complaint">Your complaint.</string>
    <string name="blocked_text_1">You Have Been Blocked</string>
    <string name="blocked_text_2">Write an explanation in textfield below.</string>
    <string name="send">Send</string>
    <string name="create_room">Create room</string>
    <string name="create">Create</string>
    <string name="searchUsers">Search users</string>
    <string name="enterGroupName">Enter group name</string>
    <string name="enableEditPhoto">Do you want to use full size or cropped image?</string>
    <string name="compression_confirmation_question">Do you want to send compressed image?</string>
    <string name="choiceFullSizeImage">Full size</string>
    <string name="choiceCroppedImage">Cropped</string>
    <string name="e_no_network_connection">You have no internet connection.</string>
    <string name="e_while_loading_image_from_gallery">Error while loading image from gallery.</string>
    <string name="e_failed_openning_camera">Error while opening camera.</string>
    <string name="e_no_camera_on_device">No camera on device.</string>
    <string name="e_record_time_to_long">Record time is to long.</string>
    <string name="e_something_went_wrong_while_taking_a_picture">Something went wrong while taking a picture.</string>
    <string name="e_failed_while_sending">Failed while sending.</string>
    <string name="e_error_downloading_file">Error while downloading a file.</string>
    <string name="e_error_uploading_file">Error while uploading a file.</string>
    <string name="e_something_went_wrong">Something went wrong.</string>
    <string name="e_not_chat_member">Not chat member.</string>
    <string name="e_invalid_token">Invalid token.</string>
    <string name="e_expired_token">Token expired.</string>
    <string name="no_network_connection">You do not have a connection to the internet.</string>
    <string name="e_google_play_error">Google Play Services error.</string>
    <string name="e_error_while_logout">Unable to logout, please try again.</string>
    <string name="e_error_not_decrypted">Message has not been decrypted!</string>
    <string name="e_while_encrypting">Error while encrypting.</string>
    <string name="file_size_error">Files larger than 8MB cannot be uploaded.</string>
    <string name="e_chat_inactive">Unable to send message because chat is inactive</string>
    <string name="chat_has_been_deleted_">This group has been deleted.</string>
    <string name="page_has_not_been_found_">Page has not been found.</string>
    <string name="you_are_not_a_group_admin_">You are not a group admin.</string>
    <string name="temp_password_is_not_valid_">Temp password is not valid.</string>
    <string name="login_with_temp_password_">Login with temp password.</string>
    <string name="dir_not_writable_on_the_server_">Dir not writable on the server.</string>
    <string name="invalid_login_">Incorrect username or password.</string>
    <string name="no_child_messages_">No child messages.</string>
    <string name="invalid_temp_password_">Invalid temp password.</string>
    <string name="password_already_in_use_">Password already in use.</string>
    <string name="e_email_missing">Your email is missing</string>
    <string name="e_username_not_exist">This username does not exist</string>
    <string name="e_user_not_found">User does not exists in MedicBleep</string>
    <string name="spika_big">SPIKA ENTERPRISE</string>
    <string name="spika_enterprise">Enterprise Messaging</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username or Email</string>
    <string name="new_password">Enter a new password</string>
    <string name="change_password_title">Change password</string>
    <string name="re_type_password">Re-type a new password</string>
    <string name="password">Password</string>
    <string name="login_big">LOG IN</string>
    <string name="confirm_big">CONFIRM</string>
    <string name="hi">Hi!</string>
    <string name="john_doe">Vasilije Dimitrijev</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="lobby">Lobby</string>
    <string name="users">Users</string>
    <string name="groups">Groups</string>
    <string name="rooms">Rooms</string>
    <string name="pick_category">Pick category</string>
    <string name="title_lobby">Lobby</string>
    <string name="invite">Invite</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="record">Record</string>
    <string name="gallery">Gallery</string>
    <string name="invalid_token_message">INVALID TOKEN</string>
    <string name="msg_from">New message from</string>
    <string name="no_items">No Items</string>
    <string name="no_messages">No Messages</string>
    <string name="file_download">File</string>
    <string name="file_download_started">File download started&#8230;</string>
    <string name="download_in_progress">Download in progress&#8230;</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed&#8230;</string>
    <string name="open">OPEN</string>
    <string name="message_deleted">[deleted]</string>
    <string name="flash_decrypting">Decrypting&#8230;</string>
    <string name="remove">Remove</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="verify_phone_number">Verify phone number:\n</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="login_remember_me">Remember me?</string>
    <string name="enable_passcode_label">Enable passcode</string>
    <string name="enter_a_passcode">Enter a passcode</string>
    <string name="enter_your_passcode">Enter your passcode</string>
    <string name="re_enter_your_passcode">Re-enter your passcode</string>
    <string-array name="group_chat_settings_array">
        <item>Show profile</item>
    </string-array>
    <string-array name="private_chat_settings_array">
        <item>Show profile</item>
        <item>Invite users</item>
    </string-array>
    <string-array name="room_chat_settings_array">
        <item>Show profile</item>
        <item>Leave room</item>
    </string-array>
    <string-array name="room_chat_admin_active_settings_array">
        <item>Show profile</item>
        <item>Manage users</item>
        <item>Deactivate group</item>
        <item>Delete group</item>
    </string-array>
    <string-array name="room_chat_admin_inactive_settings_array">
        <item>Show profile</item>
        <item>Manage users</item>
        <item>Activate group</item>
        <item>Delete group</item>
    </string-array>
    <string name="selected_users">"Selected: "</string>
    <string name="you_didn_t_select_any_users">You didn\'t select any users</string>
    <string name="all">All</string>
    <string-array name="profile_detail_keys">
        <item>mobile_number</item>
        <item>phone_number</item>
        <item>email</item>
        <item>gender</item>
        <item>home_address</item>
        <item>job_address</item>
        <item>dob</item>
        <item>language1</item>
        <item>language2</item>
        <item>language3</item>
        <item>fax</item>
        <item>interests</item>
        <item>web_site</item>
    </string-array>
    <string-array name="profile_detail_values">
        <item>Mobile Number</item>
        <item>Phone Number</item>
        <item>Email</item>
        <item>Gender</item>
        <item>Home address</item>
        <item>Job address</item>
        <item>Date of birth</item>
        <item>First language</item>
        <item>Second language</item>
        <item>Third language</item>
        <item>Fax</item>
        <item>Interests</item>
        <item>Web site</item>
    </string-array>
    <string name="select_category">Select category</string>
    <string name="choose_category">Choose category</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="medic_small_caps">medic</string>
    <string name="bleep_small_caps">bleep</string>
    <string name="connect_communicate_collaborate">connect, communicate, collaborate</string>
    <string name="email_address">Email Address</string>
    <string name="what_is_this_">What is this?</string>
    <string name="enter_your_valid_email">Enter Your valid email. We will send \n you your password right away.</string>
    <string name="take_photo_small">Take Photo</string>
    <string name="select_photo_small">Select Photo</string>
</resources>