<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/logoAndName"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_gravity="bottom"
            android:paddingBottom="8dp"
            android:layout_marginRight="5dp"
            android:text="@string/medic_small_caps"
            android:textColor="@color/medic_bleep_blue"/>

        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:paddingBottom="8dp"
            android:text="@string/bleep_small_caps"
            android:textColor="@color/medic_bleep_text_gray"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/connectCommunicateCollaborate"
        android:text="@string/connect_communicate_collaborate"
        android:textColor="@color/medic_bleep_text_gray"/>

    <LinearLayout
        android:id="@+id/smsLayout"
        android:layout_below="@id/connectCommunicateCollaborate"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"  >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/medic_bleep_text_gray"
            android:hint="@string/phone_number"
            android:textColorHint="@color/medic_bleep_hint_gray"
            android:background="@drawable/et_background"
            android:id="@+id/inputEditText"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_phone_number"
            android:gravity="center"
            android:background="@null"
            android:maxLines="3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_green"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/changePhoneNumberButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_green"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/change_phone_number"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        

    </LinearLayout>

</RelativeLayout>