<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:background="@color/black_shadow_transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/selectPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white_to_blue_selector"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/select_photo_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white_to_blue_selector"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/take_photo_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_blue"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:text="@string/cancel_big"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>