<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height">

        <ImageButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_transp_blue"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/btn_back_blue" />

        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgot_password"
            android:textColor="@color/medic_bleep_blue"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvLabelPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionBarLayout"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_valid_email"
        android:textColor="@color/medic_bleep_text_gray"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabelPassword"
        android:layout_marginTop="25dp"
        android:id="@+id/mailAndStars">

        <TextView
            android:id="@+id/tvRequiredStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="*"
            android:layout_alignBottom="@+id/username"
            android:layout_alignTop="@+id/username"
            android:includeFontPadding="false"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/tvRequiredStar"
            android:background="@drawable/et_background"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/medic_bleep_text_gray"
            android:textColorHint="@color/medic_bleep_hint_gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_alignLeft="@id/username"
            android:layout_alignRight="@id/username"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_green"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>



</RelativeLayout>
