<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp" >

        <com.medicbleep.app.chat.views.RobotoRegularTextView
            android:id="@+id/procTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/processing"
            android:textColor="@color/default_blue"
            android:textSize="20sp" />

        <com.medicbleep.app.chat.views.RobotoRegularTextView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/dot"
            android:textColor="@color/default_blue"
            android:textSize="20sp" />

        <com.medicbleep.app.chat.views.RobotoRegularTextView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/dot"
            android:textColor="@color/default_blue"
            android:textSize="20sp" />

        <com.medicbleep.app.chat.views.RobotoRegularTextView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/dot"
            android:textColor="@color/default_blue"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/linearLayout1"
        android:layout_alignRight="@id/linearLayout1"
        android:layout_below="@id/linearLayout1"
        android:background="@color/white"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/tvDecrypting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/flash_decrypting"
            android:textColor="@color/default_blue"
            android:textSize="17sp"
            android:visibility="visible" />
    </RelativeLayout>

</RelativeLayout>