<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wholeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height"
        android:background="@color/default_blue" >

        <ImageButton
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_transp_blue"
            android:contentDescription="@null"
            android:padding="20dp"
            android:src="@drawable/btn_back" />

        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
            android:id="@+id/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
        <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
            android:id="@+id/saveRoomProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_transp_blue"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/save"
            android:textSize="16sp" />
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/default_blue"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/profileTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_toggle_tab"
            android:textColor="@drawable/selector_tab_toggle"
            android:textOff="@string/profile"
            android:textOn="@string/profile" />

        <ToggleButton
            android:id="@+id/membersTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_toggle_tab"
            android:textColor="@drawable/selector_tab_toggle"
            android:textOff="@string/members"
            android:textOn="@string/members" />
    </LinearLayout>

    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

</LinearLayout>